[project]
name = "token-cost-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "google-genai>=1.49.0",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "xai-sdk>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["token-cost-compare"]
